2003-05-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/decorations.c: Sync up motif hints structure to aix,hp,
	solaris.

2003-05-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):
	do not confine the pointer to the root window when grabbed; this can
	cause the pointer to be warped to another screen
	* fvwm/menus.c (get_menu_options):
	fixed placement of menus on Xinerama screens
	* libs/FScreen.c (FScreenGetResistanceRect):
	fixed function to do something useful
	* libs/Flocale.c (FlocaleDrawString):
	support font shadowing without colorsets
	* libs/ColorUtils.c:
	reformatted file
	* fvwm/menuitem.c (menuitem_paint):
	do not use colorsets in menus if they are not defined
	* fvwm/menustyle.c (menustyle_parse_style):
	fixed initialisation of MenuStyle colorsets when mwm/fvwm menu style is
	issued again

2003-05-23  olicha  <olivier.chapuis@free.fr>

	* fvwm/bindings.c (ParseBinding):
	(bind_get_bound_button_contexts):
	* libs/Bindings.c (GrabWindowButton):
	Fixed window button grabbing

2003-05-22  olicha  <olivier.chapuis@free.fr>

	* fvwm/colorset.c (parse_colorset):
	Fixed an uninit mem

	* fvwm/borders.c (border_fill_pixmap_background):
	Fixed problem with depth 1 pixmap

	* fvwm/conditional.c (CMD_On):
	Fixed memory leaks

	* fvwm/conditional.c (CreateConditionMask):
	Fixed memory leaks for layer and state

2003-05-22  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added perllib/FVWM/Tracker/Makefile

2003-05-22  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	* fvwm/style.h:
	* fvwm/style.c (print_styles):
	* fvwm/builtins.c (CMD_PrintInfo):
	New style subject to PrintInfo

2003-05-20  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleGetFontOrFontSet):
	Allowed empty xft font name

	* libs/Makefile.am:
	* libs/flist.c (new file):
	* libs/flist.h (new file):
	Added a flist structure and some basic function for handling such
	stucture

	* libs/FGettext.c (*):
	Use the new flist struct and functions interface
